# StompLog

./: .gitignore  CMakeLists.txt
src/: DeleteThis.cpp  DeleteThis.h  Formatter.cpp  Formatter.h  Message.cpp  Message.h
tests/: MessageTest.cpp  test.cpp
